--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "homepage",
   "version": "1.0.0",
   "description": "\"# homepage\"",
-  "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
